# readability

./: .env.sample  OneStopEnglish_embed.py  OneStopEnglish_readability.py  README.md  app.py  create_trip_dataset.py  embed_OneStopEnglish.py  generate.py  main.py  pyproject.toml  rate_OneStopEnglish.py  train_validation.py  umap_OneStopEnglish.py  validate.py
datasets/OneStopEnglish/: OneStopEnglish_readability.parquet  OneStopEnglish_trip_words.parquet  all.csv  all_paragraphs.csv
models/OneStopEnglish/: OneStopEnglish_embed_SVM_linear.pkl  OneStopEnglish_embed_SVM_linear_half.pkl  OneStopEnglish_embed_SVM_linear_umap.pkl  OneStopEnglish_embed_SVM_poly.pkl  OneStopEnglish_embed_SVM_rbf.pkl  OneStopEnglish_embed_SVM_sigmoid.pkl  OneStopEnglish_embed_half_readability_SVM_linear_Rscaled.pkl  OneStopEnglish_embed_readability_SVM_linear.pkl  OneStopEnglish_embed_readability_SVM_linear_Rscaled.pkl  OneStopEnglish_embed_readability_SVM_linear_scaled.pkl  OneStopEnglish_embed_readability_SVM_poly.pkl  OneStopEnglish_embed_readability_SVM_poly_Rscaled.pkl  OneStopEnglish_embed_readability_SVM_poly_scaled.pkl  OneStopEnglish_embed_readability_SVM_rbf.pkl  OneStopEnglish_embed_readability_SVM_rbf_Rscaled.pkl  OneStopEnglish_embed_readability_SVM_rbf_scaled.pkl  OneStopEnglish_embed_readability_SVM_sigmoid.pkl  OneStopEnglish_embed_readability_SVM_sigmoid_Rscaled.pkl  OneStopEnglish_embed_readability_SVM_sigmoid_scaled.pkl  OneStopEnglish_readability_SVM_linear.pkl  OneStopEnglish_readability_SVM_linear_scaled.pkl  OneStopEnglish_readability_SVM_poly.pkl  text_svm_umap_model.pkl  (+7 more)
(+9 files in other folders)
