[project]
name = "readability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.33.1",
    "jupyterlab>=4.4.4",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=4.1.0",
    "swifter>=1.4.0",
    "torch>=2.7.1",
    "transformers>=4.53.0",
]
